--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 04:29:00 PM</p>
+    <p class="lastupdate">09/15/2020 04:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">87.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">87.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">87.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">32.5&#176;F</td>
+        <td class="data">30.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">14%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.966 inHg (-0.033)</td>
+        <td class="data">29.966 inHg (-0.029)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph SW (225&#176;)</td>
+        <td class="data">10 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.3&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
     </tbody>
   </table>
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="12:39:49 PM">
             50.5</span><br/>
-          <span title="04:16:38 PM">
-            30.7</span>
+          <span title="04:33:52 PM">
+            30.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
             52.9</span><br/>
-          <span title="04:16:38 PM (Tuesday)">
-            30.7</span>
+          <span title="04:33:52 PM (Tuesday)">
+            30.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:28:02 PM">
-            80.3</span><br/>
+          <span title="04:32:02 PM">
+            80.4</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="11:46:01 AM">
             38</span><br/>
-          <span title="04:10:02 PM">
-            30</span>
+          <span title="04:33:02 PM">
+            29</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
             41</span><br/>
-          <span title="04:10:02 PM (Tuesday)">
-            30</span>
+          <span title="04:33:02 PM (Tuesday)">
+            29</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 1 hour, 42 minutes</td>
+      <td class="data">14 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 1 hour, 42 minutes</td>
+      <td class="data">14 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
