--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 06:19:00 PM</p>
+    <p class="lastupdate">09/15/2020 06:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">82.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">82.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">82.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">31.8&#176;F</td>
+        <td class="data">31.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph SSW (202&#176;)</td>
+        <td class="data">9 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.7&#176;F</td>
+        <td class="data">81.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">28%</td>
+        <td class="data">27%</td>
       </tr>
     </tbody>
   </table>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:18:02 PM">
-            81.7</span><br/>
+          <span title="06:22:02 PM">
+            81.8</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="11:46:01 AM">
             38</span><br/>
-          <span title="05:07:02 PM">
-            28</span>
+          <span title="06:21:02 PM">
+            27</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
             41</span><br/>
-          <span title="05:07:02 PM (Tuesday)">
-            28</span>
+          <span title="06:21:02 PM (Tuesday)">
+            27</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 3 hours, 32 minutes</td>
+      <td class="data">14 days, 3 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 3 hours, 32 minutes</td>
+      <td class="data">14 days, 3 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
