--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 07:44:00 PM</p>
+    <p class="lastupdate">09/15/2020 07:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">72.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">72.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">72.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">34.6&#176;F</td>
+        <td class="data">32.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">25%</td>
+        <td class="data">23%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.963 inHg (0.000)</td>
+        <td class="data">29.969 inHg (0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SW (225&#176;)</td>
+        <td class="data">1 mph W (270&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.1&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">30%</td>
       </tr>
     </tbody>
   </table>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 4 hours, 57 minutes</td>
+      <td class="data">14 days, 5 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 4 hours, 57 minutes</td>
+      <td class="data">14 days, 5 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
