--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 08:29:00 PM</p>
+    <p class="lastupdate">09/15/2020 08:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.6&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.6&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.6&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">34.9&#176;F</td>
+        <td class="data">33.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">26%</td>
+        <td class="data">25%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.984 inHg (0.016)</td>
+        <td class="data">29.988 inHg (0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 5 hours, 42 minutes</td>
+      <td class="data">14 days, 5 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 5 hours, 42 minutes</td>
+      <td class="data">14 days, 5 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
